--- a/Instagram/PostTableViewCell.xib
+++ b/Instagram/PostTableViewCell.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -16,23 +16,23 @@
             <rect key="frame" x="0.0" y="0.0" width="637" height="909"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="637" height="908.66666666666663"/>
+                <rect key="frame" x="0.0" y="0.0" width="637" height="908.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FkY-nI-OF2">
-                        <rect key="frame" x="20" y="65" width="597" height="597"/>
+                        <rect key="frame" x="20" y="41" width="597" height="597"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="FkY-nI-OF2" secondAttribute="height" multiplier="1:1" id="zTK-SI-SxS"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yZh-gB-OAH">
-                        <rect key="frame" x="565" y="672" width="42" height="40"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="576" y="648" width="31" height="40"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="60x-TA-lJc">
-                        <rect key="frame" x="30" y="722" width="577" height="50"/>
+                        <rect key="frame" x="30" y="698" width="577" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="1NN-Vt-aTu"/>
                         </constraints>
@@ -41,7 +41,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k6E-7Z-Duh">
-                        <rect key="frame" x="30" y="672" width="40" height="40"/>
+                        <rect key="frame" x="30" y="648" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="tpa-dn-k2T"/>
                             <constraint firstAttribute="height" constant="40" id="uLf-S7-HOf"/>
@@ -49,29 +49,29 @@
                         <state key="normal" title="Button" image="like_none"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rth-1a-bq4">
-                        <rect key="frame" x="240" y="672" width="42" height="40"/>
+                        <rect key="frame" x="170" y="648" width="42" height="40"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="frH-K1-XEa">
-                        <rect key="frame" x="30" y="782" width="577" height="106"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="frH-K1-XEa">
+                        <rect key="frame" x="30" y="758" width="577" height="130"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5C-4Q-lTj">
-                        <rect key="frame" x="80" y="672" width="150" height="40"/>
+                        <rect key="frame" x="80" y="648" width="80" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="150" id="gPI-t2-qWU"/>
+                            <constraint firstAttribute="width" constant="80" id="MY6-j7-kK3"/>
                         </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <state key="normal" title="Commnent" backgroundImage="btn"/>
                     </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="yZh-gB-OAH" firstAttribute="top" secondItem="FkY-nI-OF2" secondAttribute="bottom" constant="10" id="2BJ-zZ-TU0"/>
                     <constraint firstItem="frH-K1-XEa" firstAttribute="top" secondItem="60x-TA-lJc" secondAttribute="bottom" constant="10" id="4Wp-ci-0f6"/>
-                    <constraint firstItem="rth-1a-bq4" firstAttribute="leading" secondItem="H5C-4Q-lTj" secondAttribute="trailing" constant="10" id="4x3-Vm-JMl"/>
                     <constraint firstItem="H5C-4Q-lTj" firstAttribute="top" secondItem="FkY-nI-OF2" secondAttribute="bottom" constant="10" id="53a-Tr-LXG"/>
                     <constraint firstAttribute="trailingMargin" secondItem="FkY-nI-OF2" secondAttribute="trailing" id="94z-nY-jmu"/>
                     <constraint firstItem="frH-K1-XEa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="BJt-hS-Fm4"/>
@@ -79,6 +79,7 @@
                     <constraint firstItem="yZh-gB-OAH" firstAttribute="centerY" secondItem="k6E-7Z-Duh" secondAttribute="centerY" id="Bj9-em-u82"/>
                     <constraint firstItem="FkY-nI-OF2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="Cyk-Jm-UZ5"/>
                     <constraint firstAttribute="trailingMargin" secondItem="60x-TA-lJc" secondAttribute="trailing" constant="10" id="D9S-Ta-Jck"/>
+                    <constraint firstItem="rth-1a-bq4" firstAttribute="leading" secondItem="H5C-4Q-lTj" secondAttribute="trailing" constant="10" id="EUu-lE-iaZ"/>
                     <constraint firstAttribute="trailingMargin" secondItem="frH-K1-XEa" secondAttribute="trailing" constant="10" id="LTC-Sl-QQu"/>
                     <constraint firstItem="k6E-7Z-Duh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="NKU-FG-7Tl"/>
                     <constraint firstItem="rth-1a-bq4" firstAttribute="centerY" secondItem="k6E-7Z-Duh" secondAttribute="centerY" id="Usk-l4-qWu"/>
